--- a/website_zoopa/footer__style.css
+++ b/website_zoopa/footer__style.css
@@ -187,26 +187,33 @@ html {
 
 }
 
+/* 414 × 896 */
 @media(max-width: 667px) {
     .footer__wrapper {
         box-sizing: border-box;
     }
 
     .footer__up {
-        margin-left: 16px;
+        margin: auto;
+        /* margin-left: 16px; */
         padding-top: 18px;
+        display: block;
     }
 
     .footer__heading {
+        margin: auto;
         text-align: center;
         font-size: 24px;
         font-style: normal;
         font-weight: 400;
         line-height: normal;
         letter-spacing: normal;
+        margin-bottom: 40px;
+
     }
 
     .footer__paragraph {
+        margin: auto;
         width: 335px;
         text-align: center;
         margin-bottom: 40px;
@@ -247,13 +254,17 @@ html {
     }
 
     .footer__ul {
-        margin-left: 56px;
 
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-left: 0;
 
 
+    }
+
+    .footer__li {
+        text-align: center;
     }
 
     .footer__stroke {
